# NextFrame

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  ban_frameworks.toml  demo-built.html  demo-video-timeline.html  package-lock.json  package.json  review.json  reviewer-cli.md  reviewer-scene-quality.md  task-cli.md  task-scene-quality.md  tsconfig.json
legacy-v08/nf-source/source/: Cargo.toml
legacy-v08/nf-source/source/src/: cli.rs  cmd_align.rs
poc/11-iosurface-capture/: Cargo.toml
poc/11-iosurface-capture/src/: main.rs
src/nf-cli/: CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
src/nf-cli/examples/: cosmic.timeline.json  launch.timeline.json  sonnet-metrics.timeline.json  sonnet.timeline.json
src/nf-cli/preview/: app.css  app.js  app.ts  preview.html  scene-editor-prototype.html  scene-preview-prototype.html
src/nf-cli/scenes/: index.js
src/nf-cli/scripts/: gen-thumbs.mjs
src/nf-cli/src/: engine.rs  error.rs  index.ts  io_json.rs  main.rs
src/nf-cli/src/ai/: tools.js  tools.ts
src/nf-cli/src/commands/: anchors.rs  build.rs  karaoke.rs  karaoke_template.html  lint_track.rs  match.ts  mod.rs  new_cmd.rs  open.rs  record.rs  schema.rs  validate.rs
src/nf-cli/src/commands/_helpers/: _io.js  _io.ts  _legacy-timeline.js  _pipeline-utils.js  _pipeline-utils.ts  _pipeline.js  _pipeline.ts  _project.js  _project.ts  _resolve.js  _resolve.ts  _source-transcript.js  _source-transcript.ts  _source.js  _source.ts  _timeline-validate.js  _timeline-validate.ts  help.js
src/nf-cli/src/commands/ai_ops/: cmd.rs  mod.rs
src/nf-cli/src/commands/anchors/: from-tts.ts  index.ts  list.ts  validate.ts
src/nf-cli/src/commands/app/: app-eval.js  app-eval.ts  app-pipeline.js  app-pipeline.ts  app-screenshot.js  app-screenshot.ts  app.js  app.ts
src/nf-cli/src/commands/match/: from-tts.ts  plan.ts  preview.ts  validate.ts
src/nf-cli/src/commands/pipeline/: atom-add.js  atom-add.ts  atom-list.js  atom-list.ts  atom-remove.js  atom-remove.ts  audio-get.js  audio-get.ts  audio-set.js  audio-set.ts  audio-synth.js  audio-synth.ts  output-add.js  output-add.ts  output-list.js  output-list.ts  output-publish.js  output-publish.ts  pipeline-get.js  pipeline-get.ts  produce.js  script-get.js  script-get.ts  script-set.js  script-set.ts  source-align.js  source-align.ts  source-cut.js  (+14 more)
src/nf-cli/src/core/: legacy-render.js  legacy-timeline.js  timeline-validate.js
src/nf-cli/src/lib/: canvas-factory.js  canvas-factory.ts  guard.js  guard.ts  legacy-fonts.js  legacy-render.js  legacy-render.ts  legacy-timeline.js  legacy-timeline.ts  scene-registry.js  scene-registry.ts  timeline-utils.js  timeline-utils.ts  timeline-validate.js  timeline-validate.ts  v08-from-tts.ts  v3-describe.js  v3-describe.ts
src/nf-cli/src/scenes/: index.js
src/nf-cli/src/targets/: browser.js  browser.ts  ffmpeg-mp4.js  ffmpeg-mp4.ts  harness-gen.js  harness-gen.ts  napi-canvas.js  napi-canvas.ts  recorder.js  recorder.ts
src/nf-cli/src/timeline/: ops.js  ops.ts
src/nf-cli/src/views/: ascii.js  ascii.ts  gantt.js  gantt.ts
src/nf-cli/test/: anchors-resolver.test.ts  anchors-validator.test.ts  cli-help.test.js  cli-help.test.ts  index.js  v06-ducking.test.ts  v06-scene-per-segment.test.ts  v06-subtitle-from-words.test.ts  v1-data-contract.test.js  v1-data-contract.test.ts  v3-ai.test.js  v3-ai.test.ts  v3-architecture.test.js  v3-cli.test.js  v3-cli.test.ts  v3-preview-engine.test.js  v3-preview-engine.test.ts  v3-render.test.js  v3-render.test.ts  v4-pipeline.test.js  v4-pipeline.test.ts  v5-source.test.js  v5-source.test.ts
src/nf-cli/test/fixtures/: minimal-v3.json  preview-multi-layer.json
src/nf-cli/tests/: ai_ops_serve.rs  architecture.rs  architecture_reverse.rs  build_cli.rs  integration.rs  integration_e2e.rs
src/nf-cli/tests/support/: architecture_support.rs
src/nf-recorder/: CLAUDE.md  Cargo.toml
src/nf-recorder/shaders/: composite.metal
src/nf-recorder/src/: bindings.rs  capture.rs  cli.rs  clock.rs  compositor.rs  encoder.rs  events.rs  export_api.rs  frame_pool.rs  io_surface_alias.rs  lib.rs  main.rs  muxer.rs  orchestrator.rs  parallel.rs  pattern.rs  plan.rs  progress.rs  record_loop.rs  recorder.rs  sei_injector.rs  snapshot.rs  util.rs  verify_mp4.rs  worker.rs
src/nf-recorder/src/api/: mod.rs  orchestrator.rs
src/nf-recorder/src/encoder/: config.rs  ffmpeg.rs  mod.rs  pipeline.rs  pixel_buffer.rs
src/nf-recorder/src/overlay/: ffmpeg.rs  mod.rs  perf.rs  spec.rs  tests.rs
src/nf-recorder/src/parser/: manifest.rs  mod.rs  srt.rs  tests.rs  types.rs
src/nf-recorder/src/pipeline/: h264.rs  mod.rs  mp4_writer.rs  vt_wrap.rs
src/nf-recorder/src/record/: cleanup.rs  frame_loop.rs  mod.rs  setup.rs
src/nf-recorder/src/server/: http.rs  path.rs  tests.rs
src/nf-recorder/src/webview/: capture.rs  frame.rs  inject.rs  mod.rs  navigation.rs  parallel.rs
src/nf-recorder/tests/: alias_parity.rs  arch_no_eval.rs  cli_events.rs  encode_smoke.rs  integration_pixel.rs  mp4_writer.rs  pool_throughput.rs  snapshot.rs  verify_mp4.rs  vt_encode.rs
src/nf-shell/: Cargo.toml
src/nf-shell-mac/: CLAUDE.md  Cargo.toml  build.rs
src/nf-shell-mac/src/: app.rs  bindings.rs  bridge.rs  carenderer.rs  html_template.rs  hud.rs  inspector.rs  iosurface.rs  ipc.rs  lib.rs  main.rs  panels.rs  preview.rs  protocol.rs  runtime_embed.rs  screenshot.rs  source.rs  source_file.rs  sync.rs  timeline.rs  topbar.rs  webview.rs  window.rs
src/nf-shell-mac/src/headless/: mac.rs
src/nf-shell-mac/src/tests/: protocol.rs
src/nf-shell-mac/tests/: arch_no_eval.rs  atomic_write.rs  carenderer_sample.rs  headless_smoke.rs  html_template.rs  source.rs  source_watcher.rs  wkwebview_async_seek.rs
src/nf-shell/src/: main.rs  protocol.rs  tests.rs
src/nf-shell/src/ai_ops/: control.rs  mod.rs  screenshot.rs  script.rs
src/nf-shell/src/ipc/: bridge.rs  http.rs  mod.rs
src/nf-shell/src/window/: app.rs  mod.rs
src/nf-wysiwyg/: Cargo.toml
src/nf-wysiwyg/src/: dom_snapshot.rs  edit_op.rs  mode.rs  timeline.rs  wgpu_replay.rs
src/nf-wysiwyg/tests/: mode_stable.rs
(+1958 files in other folders)
