[workspace]
# Empty workspace — project reset at v0.x-final (2026-04-17).
# Previous src/ (7 crate) archived to archive/v0.x-src-final.tar.gz (local only, .gitignored).
# Previous spec/ archived to archive/v0.x-spec-full.tar.gz (local) + github.com/ChaosRealmsAI/NextFrame-spec.
# Next version v1.0 will add members here.
members = []
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
wildcard_imports = "deny"

[profile.release]
lto = "thin"
