[workspace]
members = ["src/nf-cli", "src/nf-tts", "src/nf-guide", "src/nf-shell"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
wildcard_imports = "deny"

[profile.release]
lto = "thin"

# nf-shell: aggressive size opt for binary < 8MB target
[profile.release.package.nf-shell]
opt-level = "z"
codegen-units = 1
strip = true
