[package]
name = "nf-wysiwyg"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSError"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }

[lints]
workspace = true
